--- a/src/components/Bottle/Bottle.css
+++ b/src/components/Bottle/Bottle.css
@@ -1,9 +1,9 @@
-.card{
-    border: 2px solid red;
-    padding: 20px;
-    border-radius:  20px;
+.card {
+  /* border: 2px solid red; */
+  padding: 20px;
+  border-radius: 20px;
 }
-.bottle img{
-    width: 200px;
-    border-radius: 20px;
+.bottle img {
+  width: 200px;
+  border-radius: 20px;
 }
